--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,22 @@ __pycache__/
 *.py[codz]
 *$py.class
 
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+.Python
+venv/
+env/
+
+
 # C extensions
 *.so
 
