--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,26 @@
-version: '3.8'
 
 services:
+  postgres:
+    image: postgres:16-alpine
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: pass
+      POSTGRES_DB: cookwizard
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
   backend:
     build: ./backend
     ports:
       - "8000:8000"
+    environment:
+      DATABASE_URL: postgresql://user:pass@postgres:5432/cookwizard
     volumes:
       - ./backend:/app
+    depends_on:
+      - postgres
+
+volumes:
+  postgres_data:
