--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U user"]
+      test: ["CMD-SHELL", "pg_isready -U user -d cookwizard"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -41,3 +41,4 @@ services:
       - .:/app
 volumes:
   postgres_data:
+
