--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,14 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-
+  telegram-bot:
+    build:
+      context: .
+      dockerfile: BotDockerfile
+    env_file: .env  
+    restart: unless-stopped
+    container_name: cookwizard
+    
   backend:
     build: ./backend
     ports:
