--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,15 @@ services:
     build:
       context: .
       dockerfile: BotDockerfile
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
+      - API_HOST=${API_HOST}
+      - API_PORT=8000
     env_file: .env  
     restart: unless-stopped
     container_name: cookwizard
+    depends_on:
+      - backend
     
   backend:
     build: ./backend
