--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     restart: unless-stopped
     container_name: cookwizard
     depends_on:
-      -postgres:
+      postgres:
         condition: service_healthy
       backend:
         condition: service_started
